--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="AppTheme" parent="android:Theme.Holo.Light"></style>
+    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar"></style>
     
     <style name="ErrorText" parent="@android:style/TextAppearance.Medium">
         <item name="android:textColor">@color/dark_purple</item>
