--- a/res/layout/fragment_image_grid.xml
+++ b/res/layout/fragment_image_grid.xml
@@ -31,6 +31,7 @@
         android:numColumns="3"
         android:paddingLeft="@dimen/def_spacing"
     	android:paddingRight="@dimen/def_spacing"
+    	android:listSelector="@android:color/transparent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
  
