--- a/res/layout/fragment_favorites.xml
+++ b/res/layout/fragment_favorites.xml
@@ -1,14 +1,23 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusableInTouchMode="false"
     android:focusable="false"
-    android:orientation="vertical"
-    android:animateLayoutChanges="true">
+    android:orientation="vertical">
+ 
     
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Favorites go here"
-        android:textSize="36sp"/>
+    <ListView 
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:listSelector="@android:color/transparent">
+    </ListView>
     
-</LinearLayout>
+    <TextView 
+        android:id="@android:id/empty"
+        android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:gravity="center"
+        android:text="@string/favorites_empty"/>
+    
+</FrameLayout>
