--- a/res/layout/row_favorites.xml
+++ b/res/layout/row_favorites.xml
@@ -1,21 +1,36 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-    
-    <ImageView
-        android:id="@+id/row_img"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/img_height"
-        android:scaleType="centerCrop"
-        android:background="@color/pale_gray"/>
-    
-    <TextView android:id="@+id/row_caption"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       
-       android:layout_marginTop="@dimen/half_spacing"
-       android:layout_marginBottom="@dimen/double_spacing"
-       style="@style/CaptionText"/>
-    
-</LinearLayout>
+    android:layout_height="wrap_content">
+	<LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="vertical">
+	    
+	    <ImageView
+	        android:id="@+id/row_img"
+	        android:layout_width="match_parent"
+	        android:layout_height="@dimen/img_height"
+	        android:scaleType="centerCrop"
+	        android:background="@color/pale_gray"/>
+	    
+	    <TextView android:id="@+id/row_caption"
+	       android:layout_width="match_parent"
+	       android:layout_height="wrap_content"
+	       
+	       android:layout_marginTop="@dimen/half_spacing"
+	       android:layout_marginBottom="@dimen/double_spacing"
+	       style="@style/CaptionText"/>
+	    
+	</LinearLayout>
+    <ImageView 
+        android:id="@+id/img_fav"
+        android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:scaleType="center"
+		android:layout_gravity="top|right"
+		android:src="@drawable/favorite_on"
+		android:visibility="visible"
+		android:clickable="true"
+		android:background="@drawable/btn_transparent_selector"
+        />
+</FrameLayout>
